--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Isah</title>
 </head>
-<img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty">
+<img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
 <body>
     <h1>
         About Me!
