--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Isah</title>
 </head>
-<img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
 <body>
-    <h1>
+    <img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
+    <a href="Isah.JPG"></a><h1>
         About Me!
     </h1>
         <p>
@@ -16,9 +16,9 @@
         During my junior year I decided to add a CTD minor to my degree and 
         while I don't know what to expect from this class, I'm excited to see what I'll be able to learn!
         </p>
-
+    <h2>My Favorite Show!</h2>
         <p>
-            My favorite show at the moment is Smallville starring Tom Welling, which I just finished. Now that I don't have any new episodes to watch,
+            My favorite show at the moment is <em>Smallville</em> starring Tom Welling, which I just finished. Now that I don't have any new episodes to watch,
             I decided to start watching the rewatch podcast with the two leads from the show linked <a href="https://www.youtube.com/watch?v=DmoWiMfqAmg&t=3086s">here.</a> 
         </p>
 </body>
