--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
-    <a href="Isah.JPG"></a><h1>
+    <a href="Isah.JPG"></a>
+    <h1>
         About Me!
     </h1>
         <p>
