--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -6,8 +6,8 @@
     <title>About Isah</title>
 </head>
 <body>
-    <img src="Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
-    <a href="Isah.JPG">View my image</a>
+    <img src="../img/Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
+    <a href="../img/Isah.JPG">View my image</a>
     <h1>
         About Me!
     </h1>
