--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -6,8 +6,9 @@
     <title>About Isah</title>
 </head>
 <body>
-    <img src="../img/Isah.JPG" alt="Isah dressed as Sleeping Beauty" width="300">
-    <a href="../img/Isah.JPG">View my image</a>
+    <a href="../img/Isah.JPG">
+        <img src="../img/Isah.JPG" alt="Isah's picture" />
+    </a>
     <h1>
         About Me!
     </h1>
