--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../img/Isah.JPG">
-        <img src="../img/Isah.JPG" alt="Isah's picture" />
+        <img src="../img/Isah.JPG" alt="Isah's picture" width="300" />
     </a>
     <h1>
         About Me!
