--- a/CodePen/webDev2.html
+++ b/CodePen/webDev2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="webDevStyle.css">
 </head>
 <body>
     <div class="jump">🤾</div>
