--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -13,7 +13,7 @@
         About Me!
     </h1>
         <p>
-        Hi, my name is <strong>Isah Rosales</strong> and my favorite princess is Princess Auoroa. My pronouns are She/Her/Hers. 
+        Hi, my name is <strong>Isah Rosales</strong> and my favorite princess is Aurora. My pronouns are She/Her/Hers. 
         I am a senior pursing a dual emphasis in Marketing and Business Analytics.
         During my junior year I decided to add a CTD minor to my degree and 
         while I don't know what to expect from this class, I'm excited to see what I'll be able to learn!
