--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -16,9 +16,9 @@
     </p>
     
         <div> 
-            <img src="../img/wa3img/TaylorChild.jpg" alt="Elizabeth Taylor Headshot" ALIGN="left" width="300" />
-            <img src="../img/wa3img/Elizabeth.jpg" alt="Elizabeth Taylor Headshot" ALIGN="center" width="300"/>
-            <img src="../img/wa3img/TaylorOld.jpeg" alt="Elizabeth Taylor Headshot" ALIGN="right" width="300"/>
+            <img src="../img/wa3img/TaylorChild.jpg" alt="Elizabeth Taylor Headshot" ALIGN="left" width="300" >
+            <img src="../img/wa3img/Elizabeth.jpg" alt="Elizabeth Taylor Headshot" ALIGN="center" width="300">
+            <img src="../img/wa3img/TaylorOld.jpeg" alt="Elizabeth Taylor Headshot" ALIGN="right" width="300">
 
         </div>
    </div>
