--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -67,9 +67,9 @@
 
    <div>
     <h3>See Also...</h3>
-    <a href="https://anikaseter.github.io/wa/wa3.html"><em>BTS - Anika Seter</em></a><br>
-    <p></p>
-    <a href="https://gideonharris.github.io/wa/wa3.html"><em>Alice in Chains - Gideon Harris</em></a>
+    <p><a href="https://anikaseter.github.io/wa/wa3.html"><em>BTS - Anika Seter</em></a></p>
+    
+    <p><a href="https://gideonharris.github.io/wa/wa3.html"><em>Alice in Chains - Gideon Harris</em></a></p>
 
    </div>
    <footer>
