--- a/CodePen/webDev3/index.html
+++ b/CodePen/webDev3/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="webDev3Style.css">
+
+</head>
+<body>
+	
+</body>
+</html>
+
+
+
 <svg viewBox="-2000 -2000 4000 4000">
 	<g id="g13">
 		<g id="g12">
