--- a/CodePen/webDev3/index.html
+++ b/CodePen/webDev3/index.html
@@ -29,7 +29,7 @@
 												<g id="g2">
 													<g id="g1">
 														<g id="g0">
-															<path id="p" d="M 0 -10 v20" stroke="darkorange" stroke-width="5" />
+															<path id="p" d="M 0 -10 v20" stroke="darkred" stroke-width="5" />
 														</g>
 														<use href="#g0" transform="rotate(-90 0 -10)" />
 													</g>
