--- a/wa/wa4/wa4.html
+++ b/wa/wa4/wa4.html
@@ -28,5 +28,24 @@
     </footer>
   </section>
 
+  <section class="card2">
+    <header>
+      <h2>Tom Welling</h2>
+    </header>
+    <article>
+      <img src="tom.jpg" alt="A black and white picture of Tom - a man with brown hair and black shirt">
+      <p>Known for Smallville, Lucifer, Draft Day<br>
+      Modeled for Abercrombie & Fitch<br>
+      Originally wanted to be a firefighter before acting<br>
+      Huge fan of golf and the Dallas Cowboys<br>
+      Played Clark Kent For 10 Years<br>
+      Now a Father to 2 Boys<br>
+      <strong>Contact</strong>: AgentEmail@example.com</p>
+    </article>
+    <footer>
+      <p>Actor, Producer, Director</p>
+    </footer>
+  </section>
+
   </body>
 </html>
