--- a/wa/wa4/wa4.html
+++ b/wa/wa4/wa4.html
@@ -43,7 +43,7 @@
       <strong>Contact</strong>: AgentEmail@example.com</p>
     </article>
     <footer>
-      <p>Actor, Producer, Director</p>
+      <p>Actor/Producer/Director</p>
     </footer>
   </section>
 
