--- a/wa/wa7/wa7.html
+++ b/wa/wa7/wa7.html
@@ -18,6 +18,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="tom-welling-smallville.jpeg">
+    <img src="tom-welling-smallville.jpeg" alt="Tome Welling as Superman in Smallville">
 </body>
 </html>
