--- a/CodePen/webDev8/webDev8.html
+++ b/CodePen/webDev8/webDev8.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Mondrian toggle</title>
+  <title>Web Dev 8 - Mondrian toggle</title>
   <link rel="stylesheet" href="webDev8.css">
 
 </head>
@@ -15,3 +15,6 @@
   
 </body>
 </html>
+
+
+
