--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -20,24 +20,25 @@
       }
 
       label {
-        font-weight: bold;
+        font-weight: normal;
+        font-size: 1.5em;
         
       }
 
       div {
-        padding-bottom: 10px;
+        padding-bottom: 20px;
       }
 
       input[type="text"] {
-        padding: 5px;
-        width: 150px;
+        padding: 10px;
+        width: 200px;
       }
 
       p {
         background: pink;
-        color: #5e2612;
-        padding: 10px;
-        visibility: hidden;
+        color: #6b0e5e;
+        padding: 15px;
+        visibility: show;
       }
     </style>
   </head>
