--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -35,8 +35,9 @@
       }
 
       p {
-        background: pink;
+        background: rgb(247, 70, 99);
         color: #6b0e5e;
+        font-weight: bold;
         padding: 15px;
         visibility: show;
       }
@@ -56,7 +57,7 @@
       ><input id="uk" type="radio" name="ukus" value="uk" />
     </div>
     <div>
-      <button class="randomize">Generate random story</button>
+      <button class="randomize">Generate Random Story</button>
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
