--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -20,7 +20,7 @@
       <button type="button" id="js-new-quote" class="new-quote button">
         Generate a new cat fact!
       </button>
-      <a id="js-tweet-quote" class="twitter button" target="_blank" rel="noreferrer">
+      <a id="js-tweet-quote" class="twitter button" href="#" target="_blank" rel="noreferrer">
         Share this fact!
       </a>
     </section>
