--- a/Quizzes/quiz12.html
+++ b/Quizzes/quiz12.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>JSON: Task 1</title>
+    <title>Quiz 12</title>
     <style>
       p {
         color: purple;
